# markdown-cms

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/markdown_cms/: __init__.py  __main__.py  app.py  cli.py
src/markdown_cms/agents/: __init__.py  base_agent.py  cli.py  implementation_agent.py  orchestrator_agent.py  testing_agent.py
src/markdown_cms/core/: admin_routes.py  auth.py  auth_routes.py  config.py  custom_syntax.py  database.py  forms.py  models.py  parser.py  pure_text_parser.py  queries.py  registry.py  router.py  router_backup.py  sidebar.py  syntax-mappings.md
src/markdown_cms/plugins/: __init__.py
src/markdown_cms/plugins/table/: __init__.py
tests/: test_config.py  test_parser.py
tests/fixtures/: __init__.py
