[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-cms"
version = "0.1.0"
description = "Markdown-first CMS and Application Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rakesh Patil", email = "rakeshpatil1983@gmail.com"},
]
keywords = ["cms", "markdown", "fasthtml", "htmx", "web-framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-fasthtml>=0.12.0",
    "markdown-it-py>=3.0.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/rakeshpatil1983/markdown-cms"
Documentation = "https://github.com/rakeshpatil1983/markdown-cms/docs"
Repository = "https://github.com/rakeshpatil1983/markdown-cms.git"
Issues = "https://github.com/rakeshpatil1983/markdown-cms/issues"

[project.scripts]
markdown-cms = "markdown_cms.cli:main"

[tool.hatch.version]
path = "src/markdown_cms/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_cms"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["markdown_cms"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F403",  # star imports are idiomatic in FastHTML
    "F405",  # names from star imports — FastHTML pattern
    "E402",  # module import not at top — FastHTML pattern
    "UP007", # Optional[X] vs X|None — keep Optional for readability in v0.1
    "F841",  # local variable assigned but never used — scaffolding code
    "F821",  # undefined name — dynamic functions in custom_syntax
    "F402",  # import shadowed by loop variable
    "B904",  # exception chaining — style choice for v0.1
    "E741",  # ambiguous variable name
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["markdown_cms"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
